Compress background images and add video background image

--- a/Programming/motivation/app/assets/stylesheets/custom.css.scss
+++ b/Programming/motivation/app/assets/stylesheets/custom.css.scss
@@ -40,6 +40,13 @@
 
 }
 
+.videos-background {
+	background-image: image-url("running_background.gif");
+	background-repeat: no-repeat;
+	background-size: cover;
+
+}
+
 .button-navigation {
 	display:inline-block;
 	position:relative;
