--- a/Programming/motivation/app/views/layouts/application.html.erb
+++ b/Programming/motivation/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
 <%= render "layouts/header" %>
 
-<body class = <%="homepage" if @homepage == true%>
+<body class = <%=@background%>
 
 <%= yield %>
 
