Swtich to a single table inheritance, add a few test videos to database to test buttons for videos

--- a/Programming/motivation/app/assets/stylesheets/custom.css.scss
+++ b/Programming/motivation/app/assets/stylesheets/custom.css.scss
@@ -81,3 +81,20 @@
 	height:50px;
 	float:right;
 }
+
+/*********************
+	Videos page
+*********************/
+
+.videos {
+	color:black;
+}
+
+iframe {
+	margin-left:17%;
+	margin-top:3%;
+}
+
+.video_title {
+	text-align:center;
+}
