--- a/Programming/motivation/app/views/static_pages/videos.html.erb
+++ b/Programming/motivation/app/views/static_pages/videos.html.erb
@@ -1,2 +1,2 @@
 <%= button_to "Running", video_path, method: :get, class: "btn btn-default btn-lg videos", params: {type: "RunningVideo"} %>
-<%= button_to "Weightlifting",video_path, method: :get, class: "btn btn-default btn-lg videos" %>
+<%= button_to "Weightlifting",video_path, method: :get, class: "btn btn-default btn-lg videos", params: {type:"WeightliftingVideo"} %>
