--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -19,7 +19,7 @@
 .give-me-motivation-logo {
 	height:60px;
 	width:100px;
-	margin-left:385px;
+	margin-left:395px;
 	
 }
 
@@ -50,8 +50,8 @@
 .button-navigation {
 	display:inline-block;
 	position:relative;
-	margin-top:27%;
-	left:32%;
+	margin-top:26%;
+	left:35%;
 	margin-left:20px;
 	margin-right:20px;
 
@@ -59,8 +59,8 @@
 
 .button-navigation-random-homepage {
 	position:absolute;
-	top:45%;
-	left:41%;
+	top:40%;
+	left:44%;
 
 }
 
@@ -97,4 +97,19 @@ iframe {
 
 .video_title {
 	text-align:center;
+}
+
+
+/***********************
+	Image page
+***********************/
+
+.image-motivation {
+	margin-left:auto;
+	margin-right:auto;
+	display: block;
+    max-width:500px;
+    max-height:500px;
+    width: auto;
+    height: auto;
 }
