Add functionality to sign in and log in for users, add user model

--- a/motivation/app/views/layouts/_header.html.erb
+++ b/motivation/app/views/layouts/_header.html.erb
@@ -5,8 +5,8 @@
 		<p class="navbar-text">Top Images</p>
 	</div>
 	<div class="header-text-right">
-		<p class="navbar-text">Sign up</p>
-		<p class="navbar-text">Log in</p>
+		<p class="navbar-text"><%= link_to "Sign up", new_user_path  %> </p>
+		<p class="navbar-text"><%= link_to "Log in", new_session_path %></p>
 		<p class="navbar-text">Submit a video/image</p>
 		<p class="navbar-text"><%= link_to "About", about_path%></p>
 	</div>
