--- a/motivation/app/views/layouts/_header.html.erb
+++ b/motivation/app/views/layouts/_header.html.erb
@@ -10,5 +10,8 @@
 		<p class="navbar-text">Submit a video/image</p>
 		<p class="navbar-text"><%= link_to "About", about_path%></p>
 	</div>
-
 </header>
+<% flash.each do |name, msg| %>
+   <%= content_tag :div, msg, class: "alert alert-info" %>
+<% end %>
+
