Change/move video and static controllers/routes to be more RESTful, and style sign-in page

--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -123,3 +123,27 @@ iframe {
     width: auto;
     height: auto;
 }
+
+/***********************
+	 Log-in/Sign-in page
+***********************/
+.form-horizontal {
+    text-align: center;
+}
+
+.center-signin {
+	display:inline-block;
+}
+
+.btn.btn-default.sign-in {
+	color:grey;
+	&:hover {
+		background-color:#000066;
+		border-color:#000066;
+		color:white;
+	}
+}
+
+.col-sm-2.control-label {
+	right:5%;	
+}
