--- a/motivation/app/views/static_pages/home.html.erb
+++ b/motivation/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="videos-images-button">
 	<span class="button-navigation">
-		<%= button_to "Videos", videos_path, method: :get, class: "btn btn-default btn-lg" %>
+		<%= button_to "Videos", video_categories_path, method: :get, class: "btn btn-default btn-lg" %>
 	</span>
 	<span class="button-navigation">
 		<%= button_to "Images", images_path, method: :get, class: "btn btn-default btn-lg" %>
