--- a/motivation/app/views/users/new.html.erb
+++ b/motivation/app/views/users/new.html.erb
@@ -1,16 +1,30 @@
-<h1>Signup!</h1>
-
-<%= form_for @user do |f| %>
-
-  <%= f.label :email %>
-  <%= f.email_field :email %>
-
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-
-  <%= f.submit "Submit" %>
-
-<% end %>
+<form class="form-horizontal">
+	<h1>Signup!</h1>
+	   <%= form_for @user do |f| %>
+	   	  <div class= "center-signin">
+	      <div class="form-group">
+		     <%= f.label :email, class: "col-sm-2 control-label" %>
+		  	 <div class="col-sm-10">
+		  		<%= f.email_field :email, class: "form-control" %>
+		  	</div>
+		  </div>
+		  <div class="form-group">
+		  <%= f.label :password, class: "col-sm-2 control-label"  %>
+		    <div class="col-sm-10">
+				<%= f.password_field :password, class: "form-control" %>
+			</div>
+		  </div>
+		  <div class="form-group">
+		  	<%= f.label :password_confirmation, class: "col-sm-2 control-label" %>
+		  	<div class="col-sm-10">
+		  		<%= f.password_field :password_confirmation, class: "form-control" %>
+		  	</div>
+		  </div>
+		</div>
+	  	<div class="form-group">
+	       <div class="col-sm-offset-2 col-sm-8">
+		      <%= f.submit "Submit", class: "btn btn-default sign-in" %>
+		   </div>
+	    </div>
+	<% end %>
+</form>
