--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -1,2 +1,2 @@
-<h2 class= "video_title"><%= @video_information.title%></h2>
-<iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @video.url %>" frameborder="0" allowfullscreen></iframe>
+<h2 class= "video_title"><%= @videos%></h2>
+<iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @video.url%>" frameborder="0" allowfullscreen></iframe>
