--- a/motivation/app/views/static_pages/home.html.erb
+++ b/motivation/app/views/static_pages/home.html.erb
@@ -1,13 +1,13 @@
 <div class="videos-images-button">
-	<span class="button-navigation">
+	<div class="button-navigation">
 		<%= button_to "Videos", video_categories_path, method: :get, class: "btn btn-default btn-lg" %>
-	</span>
-	<span class="button-navigation">
+	</div>
+	<div class="button-navigation">
 		<%= button_to "Images", images_path, method: :get, class: "btn btn-default btn-lg" %>
-	</span>
+	</div>
 </div>
-	<span class="button-navigation-random-homepage">
+	<div class="button-navigation-random-homepage">
 		<%= button_to "Random", images_path, method: :get, class: "btn btn-default btn-lg" %>
-	</span>
+	</div>
 </div>
 
