--- a/motivation/app/views/images/show.html.erb
+++ b/motivation/app/views/images/show.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag("https://s-media-cache-ak0.pinimg.com/236x/b9/cc/41/b9cc41fd78a441304af65cbbf8bdc633.jpg", class: "image-motivation") %>
+<%= image_tag(@image.url, class: "image-display") %>
