--- a/motivation/app/views/static_pages/home.html.erb
+++ b/motivation/app/views/static_pages/home.html.erb
@@ -3,11 +3,11 @@
 		<%= button_to "Videos", video_categories_path, method: :get, class: "btn btn-default btn-lg" %>
 	</div>
 	<div class="button-navigation">
-		<%= button_to "Images", images_path, method: :get, class: "btn btn-default btn-lg" %>
+		<%= button_to "Images", image_categories_path, method: :get, class: "btn btn-default btn-lg" %>
 	</div>
 </div>
 	<div class="button-navigation-random-homepage">
-		<%= button_to "Random", images_path, method: :get, class: "btn btn-default btn-lg" %>
+		<%= button_to "Random", image_categories_path, method: :get, class: "btn btn-default btn-lg" %>
 	</div>
 </div>
 
