--- a/motivation/app/views/users/new.html.erb
+++ b/motivation/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<div class= "container-sign-in">
 	<h1 class= "sign-up">Signup!</h1>
 	   <%= form_for @user, html: {class: "form-horizontal"} do |f| %>
 	   	  <div class= "center-signin">
@@ -26,4 +27,4 @@
 		   </div>
 	    </div>
 	<% end %>
-</form>
+</div>
