--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -13,7 +13,7 @@
 .navbar-text {
 	padding:16px;
 	margin:0 auto;
-	font-family: Lobster;
+	font-family: "Arial Black", Times New Roman;
 	font-weight:bold;
 	font-size:20px;
 	a:link {
