--- a/motivation/app/views/videos/categories.html.erb
+++ b/motivation/app/views/videos/categories.html.erb
@@ -1,2 +1,2 @@
-<%= button_to "Running", video_path, method: :get, class: "btn btn-default btn-lg videos", params: {type: "RunningVideo"} %>
-<%= button_to "Weightlifting",video_path, method: :get, class: "btn btn-default btn-lg videos", params: {type:"WeightliftingVideo"} %>
+<%= button_to "Running", video_path, method: :get, class: "favorite-video-button", params: {type: "RunningVideo"} %>
+<%= button_to "Weightlifting",video_path, method: :get, class: "favorite-video-button", params: {type:"WeightliftingVideo"} %>
