--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,93 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
+/*****************************
+ Information next to motivator
+ ****************************/
+ .motivate-information-container {
+ 	background-color:grey;
+ 	float:right;
+ 	height:490px;
+ 	width:400px;
+ 	margin:10px;
+ 	margin-right:20px;
+
+ }
+
+
+/*****************************
+ Buttons for Videos and Images
+ ****************************/
+
+.general-button {
+	border: none;
+	font-family: inherit;
+	font-size: inherit;
+	color: inherit;
+	background: none;
+	cursor: pointer;
+	padding: 25px 80px;
+	display: inline-block;
+	margin: 15px 30px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 700;
+	outline: none;
+	position: relative;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+ .videos-images-button {
+	color: black;
+}
+
+.videos-images-button:hover,
+.videos-images-button:active {
+	color: #0e83cd;
+	background: #fff;
+}
+
+.btn-1f {
+	overflow: hidden;
+}
+
+.favorite {
+	background-color:red;
+	font-size:20px;
+	letter-spacing:0px;
+}
+
+.favorite:after {
+	width: 101%;
+	height: 0;
+	top: 50%;
+	left: 50%;
+	background: #fff;
+	opacity: 0;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	-moz-transform: translateX(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+}
+
+.favorite:hover,
+.favorite:active {
+	color: white;
+}
+
+.favorite:hover:after {
+	height: 75%;
+	opacity: 1;
+}
+
+.favorite:active:after {
+	height: 130%;
+	opacity: 1;
+}
+
 /*********************
 	 Header
 *********************/
@@ -161,8 +248,9 @@
 }
 
 iframe {
-	margin-left:17%;
-	margin-top:3%;
+	padding-top:10px;
+	padding-left:30px;
+	float:left;
 }
 
 .video_title {
@@ -287,20 +375,6 @@ h1.sign-up {
 .home-button {
 	right:65%;
 	font-size:20px;
-	border:none;
-	background: none;
-	cursor: pointer;
-	padding: 25px 80px;
-	display: inline-block;
-	margin: 10px 10px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-weight: 700;
-	outline: none;
-	position: relative;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	transition: all 0.3s;
 }
 .home-button {
 	border:solid;
