--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -1,4 +1,12 @@
 <h2 class= "video_title"><%= @videos%></h2>
-<iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @video.url%>" frameborder="0" allowfullscreen></iframe>
+<div class="iframe"><iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @video.url%>" frameborder="0" allowfullscreen></iframe></div>
 
-<%= button_to "Submit", video_path, method: :get, class: "favorite-video-button" %>
+<aside>
+	<div class="motivate-information-container">
+			<%= form_for([@user, @favorite], method: :put) do |f| %>
+				<%= f.button "Favorite", class: "general-button favorite" %>
+			<% end %>
+			<%= @user %>
+	</div>
+</aside>
+
