Save videos for signed in users and displays a list of videos with a link to each video that the user has as a favorite

--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -257,6 +257,14 @@ iframe {
 	text-align:center;
 }
 
+/*********************
+ Favorite Videos page
+*********************/
+
+.iframe.center {
+   margin: 0 auto;
+   width: 800px;
+}
 
 /***********************
 	Image categories
