--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -3,10 +3,13 @@
 
 <aside>
 	<div class="motivate-information-container">
-			<%= form_for([@user, @favorite], method: :put) do |f| %>
-				<%= f.button "Favorite", class: "general-button favorite" %>
+			<%= form_for([@user, @favorite]) do |f| %>
+				<%= f.hidden_field :video_id, value: @video.id %>
+				<%= f.hidden_field :url, value: @video.url %>
+				<%= f.hidden_field :user_id, value: @user.id %>
+				<%= f.submit "Favorite", class: "general-button favorite" %>
 			<% end %>
-			<%= @user %>
+			<%= @video.id %>
 	</div>
 </aside>
 
