--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -3,6 +3,7 @@
 
 <aside>
 	<div class="motivate-information-container">
+		<% if @user %>
 			<%= form_for([@user, @favorite]) do |f| %>
 				<%= f.hidden_field :video_id, value: @video.id %>
 				<%= f.hidden_field :url, value: @video.url %>
@@ -10,6 +11,9 @@
 				<%= f.submit "Favorite", class: "general-button favorite" %>
 			<% end %>
 			<%= @video.id %>
+		<% else %>
+			<%= button_to "Favorite", new_user_path, method: :get, class: "general-button favorite" %>
+		<% end %>
 	</div>
 </aside>
 
