--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,7 @@
 
 
 /*****************************
- Information next to motivator
+ Aside information next to motivator
  ****************************/
  .motivate-information-container {
  	background-color:grey;
@@ -27,14 +27,22 @@
 	color: inherit;
 	background: none;
 	cursor: pointer;
-	padding: 25px 80px;
+	padding: 22px 70px;
 	display: inline-block;
 	margin: 15px 30px;
-	text-transform: uppercase;
 	letter-spacing: 1px;
 	font-weight: 700;
 	outline: none;
-	position: relative;
+
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.general-button:after {
+	content: '';
+	position: absolute;
+	z-index: -1;
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
@@ -55,9 +63,11 @@
 }
 
 .favorite {
-	background-color:red;
+	background-color:#ff0000;
 	font-size:20px;
 	letter-spacing:0px;
+	border-radius:15px;
+	font-family: inherit;
 }
 
 .favorite:after {
@@ -67,10 +77,9 @@
 	left: 50%;
 	background: #fff;
 	opacity: 0;
-	-webkit-transform: translateX(-50%) translateY(-50%);
-	-moz-transform: translateX(-50%) translateY(-50%);
-	-ms-transform: translateX(-50%) translateY(-50%);
-	transform: translateX(-50%) translateY(-50%);
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
 }
 
 .favorite:hover,
@@ -87,6 +96,63 @@
 	height: 130%;
 	opacity: 1;
 }
+
+.before-navigation {
+	border-radius: 50px;
+	border: 3px solid #fff;
+	color: #fff;
+	overflow: hidden;
+	background:#006633;
+	text-transform: uppercase;
+}
+
+.before-navigation:active {
+	border-color: #17954c;
+	color: #17954c;
+}
+
+.before-navigation:hover {
+	background: #24b662;
+}
+
+.before-navigation:before {
+	position: absolute;
+	height: 100%;
+	font-size: 125%;
+	line-height: 3.5;
+	color: #fff;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.before-navigation:active:before {
+	color: #17954c;
+}
+
+.before-navigation:before {
+	left: 30%;
+	opacity: 0;
+	top: 0;
+}
+
+.before-navigation:hover:before {
+	left: 10%;
+	opacity: 1;
+}
+
+.container-buttons {
+	text-align:center;
+	width:800px;
+}
+
+.video-show-navigation-buttons {
+	display:inline-block;
+	width:390px;
+	overflow:none;
+}
+
+
 
 /*********************
 	 Header
