--- a/motivation/app/views/images/categories.html.erb
+++ b/motivation/app/views/images/categories.html.erb
@@ -1,2 +1,2 @@
-<%= button_to "Running", image_path, method: :get, class: "btn btn-default btn-lg videos", params: {type: "RunningImage"} %>
-<%= button_to "Weightlifting",image_path, method: :get, class: "btn btn-default btn-lg videos", params: {type:"WeightliftingImage"} %>
+<%= button_to "Running", image_path, method: :get, class: "general-button videos-images-button blue-text", params: {type: "RunningImage"} %>
+<%= button_to "Weightlifting", image_path, method: :get, class: "general-button videos-images-button blue-text", params: {type:"WeightliftingImage"} %>
