--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -2,7 +2,7 @@
 <div class="iframe"><iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @video.url%>" frameborder="0" allowfullscreen></iframe></div>
 
 <aside>
-	<div class="motivate-information-container">
+	<div class="video-motivate-information-container">
 		<% if @user %>
 			<%= form_for([@user, @favorite]) do |f| %>
 				<%= f.hidden_field :video_id, value: @video.id %>
@@ -12,11 +12,11 @@
 			<% end %>
 			<%= @video.id %>
 		<% else %>
-			<%= button_to "Make Favorite", new_user_path, method: :get, class: "general-button favorite" %>
+			<%= button_to "Make Favorite", new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} %>
 		<% end %>
 	</div>
 </aside>
-<div="container-buttons">
+<div="container-video-show-buttons">
 	<div class= "video-show-navigation-buttons">
 		<%= button_to "Back to video categories", video_categories_path, method: :get, class: "general-button before-navigation" %>
 	</div>
