Random button on homepage works; button margin needs to be fixed.

--- a/motivation/app/views/images/show.html.erb
+++ b/motivation/app/views/images/show.html.erb
@@ -16,6 +16,6 @@
 	</aside>
 	</div>
 <div class= "container-image-show-buttons">
-		<%= button_to "Back to video categories", image_categories_path, method: :get, class: "general-button before-navigation left" %>
+		<%= button_to "Back to the image categories", image_categories_path, method: :get, class: "general-button before-navigation left" %>
 		<%= button_to "Give me more motivation" , image_path, method: :get, class: "general-button before-navigation right", params: {type: @type} %>
 </div>
