--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -18,7 +18,7 @@
 </aside>
 <div="container-video-show-buttons">
 	<div class= "video-show-navigation-buttons">
-		<%= button_to "Back to video categories", video_categories_path, method: :get, class: "general-button before-navigation" %>
+		<%= button_to "Back to the video categories", video_categories_path, method: :get, class: "general-button before-navigation" %>
 	</div>
 	<div class= "video-show-navigation-buttons">
 		<%= button_to "Give me more motivation" , video_path, method: :get, class: "general-button before-navigation", params: {type: @type} %>
