Favorite functionality for random images/videos works; Add favorite images index and show for signed in users

--- a/motivation/app/views/images/random.html.erb
+++ b/motivation/app/views/images/random.html.erb
@@ -4,12 +4,12 @@
 	<aside class="image-motivate-information-container">
 			<% if @user %>
 				<%= form_for([@user, @favorite]) do |f| %>
-					<%= f.hidden_field :image_id, value: @image.id %>
-					<%= f.hidden_field :url, value: @image.url %>
-					<%= f.hidden_field :image_id, value: @image.id %>
+					<%= f.hidden_field :image_id, value: @random_image.id %>
+					<%= f.hidden_field :url, value: @random_image.url %>
+					<%= f.hidden_field :user_id, value: @user.id %>
 					<%= f.submit "Make Favorite", class: "general-button favorite" %>
 				<% end %>
-				<%= @video.id %>
+				<%= @random_image.id %>
 			<% else %>
 				<%= button_to "Make Favorite", new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} %>
 			<% end %>
