--- a/motivation/app/views/images/show.html.erb
+++ b/motivation/app/views/images/show.html.erb
@@ -6,10 +6,10 @@
 				<%= form_for([@user, @favorite]) do |f| %>
 					<%= f.hidden_field :image_id, value: @image.id %>
 					<%= f.hidden_field :url, value: @image.url %>
-					<%= f.hidden_field :image_id, value: @image.id %>
+					<%= f.hidden_field :user_id, value: @user.id %>
 					<%= f.submit "Make Favorite", class: "general-button favorite" %>
 				<% end %>
-				<%= @video.id %>
+				<%= @image.id %>
 			<% else %>
 				<%= button_to "Make Favorite", new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} %>
 			<% end %>
