--- a/motivation/app/views/users/show.html.erb
+++ b/motivation/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
-<h1>yser</h1>
-<%= link_to "Your Favorites", user_favorite_videos_path(:favorite_videos)  %>
+<h1>Hello, <%= current_user.email %></h1>
+<%= link_to "Your favorite videos", user_favorite_videos_path(:favorite_videos) %>
+<%= link_to "Your favorite images", user_favorite_images_path(:favorite_images) %>
