--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -1,4 +1,4 @@
-<h2 class= "video_title"><%= @videos%></h2>
+T<h2 class= "video_title"><%= @videos%></h2>
 <div class="iframe"><iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @video.url%>" frameborder="0" allowfullscreen></iframe></div>
 
 <aside>
