Create unmotivational video model and begin extending video model to weed out unmotivational videos

--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -10,7 +10,11 @@ T<h2 class= "video_title"><%= @videos%></h2>
 				<%= f.hidden_field :user_id, value: @user.id %>
 				<%= f.submit "Make Favorite", class: "general-button favorite" %>
 			<% end %>
-			<%= @video.id %>
+			<%= form_for([@user, @unmotivational_video]) do |f| %>
+				<%= f.hidden_field :video_id, value: @video.id %>
+				<%= f.hidden_field :user_id, value: @user.id %>
+				<%= f.submit "Unmotivational", class: "general-button" %>
+			<% end %>
 		<% else %>
 			<%= button_to "Make Favorite", new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} %>
 		<% end %>
