Unmotivational video feature works. Needs rescue/conditional if all videos are picked as unmotivational

--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -1,4 +1,4 @@
-T<h2 class= "video_title"><%= @videos%></h2>
+<h2 class= "video_title"><%= @videos%></h2>
 <div class="iframe"><iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @video.url%>" frameborder="0" allowfullscreen></iframe></div>
 
 <aside>
@@ -29,3 +29,5 @@ T<h2 class= "video_title"><%= @videos%></h2>
 	</div>
 </div>
 
+
+<%= @umotivational_videos %>
