--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -13,6 +13,7 @@
 			<%= form_for([@user, @unmotivational_video]) do |f| %>
 				<%= f.hidden_field :video_id, value: @video.id %>
 				<%= f.hidden_field :user_id, value: @user.id %>
+				<%= f.hidden_field :url, value: @video.url %>
 				<%= f.submit "Unmotivational", class: "general-button" %>
 			<% end %>
 		<% else %>
