--- a/motivation/app/views/users/show.html.erb
+++ b/motivation/app/views/users/show.html.erb
@@ -2,3 +2,4 @@
 <%= link_to "Your favorite videos", user_favorite_videos_path(:favorite_videos) %>
 <%= link_to "Your favorite images", user_favorite_images_path(:favorite_images) %>
 <%= link_to "Your unmotivational videos", user_unmotivational_videos_path(:unmotivational_videos) %>
+<%= link_to "Your unmotivational images", user_unmotivational_images_path(:unmotivational_images) %>
