--- a/motivation/app/views/videos/random.html.erb
+++ b/motivation/app/views/videos/random.html.erb
@@ -10,7 +10,12 @@
 				<%= f.hidden_field :user_id, value: @user.id %>
 				<%= f.submit "Make Favorite", class: "general-button favorite" %>
 			<% end %>
-			<%= @random_video.id %>
+			<%= form_for([@user, @unmotivational_video]) do |f| %>
+				<%= f.hidden_field :image_id, value: @random_video.id %>
+				<%= f.hidden_field :user_id, value: @user.id %>
+				<%= f.hidden_field :url, value: @random_video.url %>
+			<%= f.submit "Unmotivational", class: "general-button" %>
+			<% end %>
 		<% else %>
 			<%= button_to "Make Favorite", new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} %>
 		<% end %>
