--- a/motivation/app/views/layouts/_header.html.erb
+++ b/motivation/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
 	<div class="header-text-left">
 		<div class="navbar-text"><%= link_to "Top Videos", "#" %></div>
 		<div class="navbar-text"><%= link_to "Top Images", "#" %></div>
-		<div class="navbar-text"><%= link_to "Submit a video/image", "#" %></div>
+		<div class="navbar-text"><%= link_to "Submit a video/image", submit_path %></div>
 	</div>
 	<div class="header-text-right">
 		<div class="navbar-text">
