Add feature for everyone to submit image/videos for admin to check and add to database. Add the ability for admins to check user submitted content

--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -326,6 +326,11 @@
 	background: #fff;
 	border-color:white;
 }
+
+
+.submit-container {
+	
+}
 /*********************
 	Videos page
 *********************/
