Add association to user and user submitted motivation models. Style submit page

--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -329,6 +329,11 @@
 
 
 .submit-container {
+	text-align:center;
+	margin:auto;
+	margin-top:70px;
+	width:500px;
+	height:450px;
 	
 }
 /*********************
