--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -425,13 +425,15 @@ iframe {
 
 h1.sign-up {
     text-align: center;
-    margin-top:3%;
+    margin-top:-3%;
     word-spacing:50px;
     margin-right:5%;
+    margin-bottom:10%;
 }
 
 .center-signin {
 	display:inline-block;
+	margin-top:70px;
 }
 
 .btn.btn-default.sign-in {
@@ -452,10 +454,6 @@ h1.sign-up {
 .col-sm-2.control-label {
 	right:5%;
 	margin-top:25px;	
-}
-
-.form-control {
-	margin-top:25px;
 }
 
 #error_explanation {
@@ -493,7 +491,7 @@ h1.sign-up {
 	background-color:#0099CC;
 	text-align:center;
 	margin:auto;
-	margin-top:70px;
+	margin-top:50px;
 	width:500px;
 	height:350px;
 	border-radius:20%;
