--- a/motivation/app/views/users/new.html.erb
+++ b/motivation/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 	
 	   <%= form_for @user, html: {class: "form-horizontal"} do |f| %>
 	   	  <div class= "center-signin">
-		   	  	<h1 class= "sign-up">Signup!</h1>
+		   	  	<h1 class= "sign-up">Sign up</h1>
 		      <div class="form-group">
 			     <%= f.label :email, class: "col-sm-3 control-label" %>
 			  	 <div class="col-sm-9">
