--- a/motivation/app/views/images/show.html.erb
+++ b/motivation/app/views/images/show.html.erb
@@ -16,12 +16,20 @@
 				<%= f.submit "Unmotivational", class: "general-button" %>
 				<% end %>
 			<% else %>
-				<%= button_to "Make Favorite", new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} %>
-				<%= button_to "Unmotivational", new_user_path, method: :get, class: "general-button unmotivational", params: {unmotivational_sign_in: true} %>
+				<%= button_to new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} do %>
+			 		<span class= "glyphicon glyphicon-heart"></span> Make Favorite
+			 	<% end %>
+				<%= button_to new_user_path, method: :get, class: "general-button unmotivational", params: {unmotivational_sign_in: true} do %>
+					<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
+				<% end %>
 			<% end %>
 	</aside>
 	</div>
 <div class= "container-image-show-buttons">
-		<%= button_to "Back to the image categories", image_categories_path, method: :get, class: "general-button before-navigation left" %>
-		<%= button_to "Give me more motivation" , image_path, method: :get, class: "general-button before-navigation right", params: {type: @type} %>
+		<%= button_to image_categories_path, method: :get, class: "general-button before-navigation left" do %>
+				<span class="glyphicon glyphicon-arrow-left"></span> Back to Images 
+			<% end %>
+		<%= button_to image_path, method: :get, class: "general-button before-navigation right", params: {type: @type}  do %>
+				Give Me More Motivation <span class="glyphicon glyphicon-arrow-right"></span> 
+			<% end %>
 </div>
